--- a/views/calder/02-who-uses-your-data.html
+++ b/views/calder/02-who-uses-your-data.html
@@ -1,8 +1,7 @@
-{% set title = 'Who uses your data - Register your preferences for sharing health data' %}
+{% set title = 'Who uses your data - Register your preference for sharing health data' %}
 {% set content_title = "Who uses your data" %}
 {% set PROTOTYPE_URL = 'calder' %}
-{% block scripts %}
-{% endblock %}
+{% block scripts %} {% endblock %}
 {% extends 'layouts/layout.html' %}
 
 {% block body %}
@@ -44,69 +43,74 @@
     </div>
   </div>
   <div class="page-section">
-      <div class="reading-width">
-          <div class="grid-row">
-            <div class="column--two-thirds">
-              <p>
-                The NHS collects health and care data from a wide variety of NHS trusts, local authorities and independent sector groups. Research bodies and organisations can request access to this data. They must meet strict conditions and criteria in order to be considered.
-              </p>
-              <p>
-                Personally identifiable data may only be released if it is used to support the delivery of health and social care services in England or if required by law. The request will be rejected if this is not the case. Third party marketing or insurance companies will not be given access to your data, unless you specifically request us to do so.
-              </p>
-              <p>
-                Organisations that can request access to data may include:
-              </p>
-              <ul>
-                <li>
-                  university researchers
-                </li>
-                <li>
-                  hospital researchers
-                </li>
-                <li>
-                  royal colleges
-                </li>
-              </ul>
-              <h3>Legal agreements</h3>
-              <p>
-                Before any data can be used, a signed data sharing agreement must be in place between the NHS and the organisation requesting information. This states the rules on what an organisation can do with shared data.
-              </p>
-              <p>
-                An agreement for data sharing will include:
-              </p>
-              <ul>
-                <li>
-                  the type of data being shared
-                </li>
-                <li>
-                  the purpose for sharing data
-                </li>
-                <li>
-                  a date for when data must be destroyed
-                </li>
-                <li>
-                  all other data security conditions
-                </li>
-              </ul>
-              <h2 id="type-of-information-we-share">Type of information we share</h2>
-              <p>
-                Your gender, date of birth and postcode are shared along with your health information. If you decide to opt-out of sharing your personally identifiable data, we will not share your name or any details that can match you personally to your medical records.
-              </p>
-              <h3>Further information</h3>
-              <ul class="link-list">
-                <li>
-                  <a href="https://understandingpatientdata.org.uk/">More information on patient data sharing</a>
-                </li>
-                <li>
-                  <a href="http://content.digital.nhs.uk/article/4981/Information-requests-from-organisations">More details on information requests</a>
-                </li>
-                <li>
-                  <a href="http://content.digital.nhs.uk/article/4963/What-we-collect">More details on the data we collect </a>
-                </li>
-              </ul>
+    <div class="reading-width">
+      <div class="grid-row">
+        <div class="column--two-thirds">
+          <p>
+            The NHS collects health and care data from a wide variety of NHS trusts and local authorities. Data is also collected from private organisations, such as private hospitals and dentists. Research bodies and organisations can request access to this data. They must meet strict conditions and criteria in order to be considered.
+          </p>
+          <p>
+            Organisations that can request access to data may include:
+          </p>
+          <ul>
+            <li>
+              university researchers
+            </li>
+            <li>
+              hospital researchers
+            </li>
+            <li>
+              royal colleges
+            </li>
+            <li>
+              commercial companies working to improve the NHS
+            </li>
+          </ul>
+
+          <h2 id="how-your-data-is-used" class="h3">How your data is used</h2>
+          <div class="panel">
+            <div class="panel__content panel__content--half">
+              <div class="reading-width">
+                <p>Personally identifiable data will only be used if it is:</p>
+                <ul class="list--check">
+                  <li>used to support the delivery of health and social care services</li>
+                  <li>allowed by law</li>
+                </ul>
+              </div>
+            </div>
+            <div class="panel__content panel__content--half">
+              <div class="reading-width">
+                <p>Access to personally identifiable data will <b>not</b> be given to:</p>
+                <ul class="list--cross">
+                  <li>third party marketing companies</li>
+                  <li>third party insurance companies</li>
+                </ul>
+                <p>(unless you specifically ask us to do so)</p>
+              </div>
             </div>
           </div>
+          <h3>Before your data is used</h3>
+          <p>
+            A signed data sharing agreement must be in place between the NHS and the organisation requesting information. This legally protects the data and states the rules on what it can be used for.
+          </p>
+          <p>
+            An agreement for data sharing will include:
+          </p>
+          <ul>
+            <li>
+              the type of data being shared
+            </li>
+            <li>
+              the purpose for sharing data
+            </li>
+            <li>
+              all other data security conditions
+            </li>
+          </ul>
+
+        </div>
       </div>
+    </div>
   </div>
 
   <div class="page-section">
