--- a/views/calder/03-how-data-is-kept-secure.html
+++ b/views/calder/03-how-data-is-kept-secure.html
@@ -1,4 +1,4 @@
-{% set title = 'How data is kept secure - Register your preferences for sharing health data' %}
+{% set title = 'How data is kept secure - Register your preference for sharing health data' %}
 {% set content_title = "How data is kept secure" %}
 {% set PROTOTYPE_URL = 'calder' %}
 {% block scripts %}
@@ -54,22 +54,26 @@
                 The NHS takes the responsibility for protecting your personally identifiable data very seriously. Information Governance (IG) across the NHS ensures your data is looked after in accordance with good practice and the law. If an organisation can’t prove it will look after data to IG standards, their request for access will be rejected.
               </p>
               <p>
-                Those who have access to data must have appropriate training. They must also be approved by the organisation requesting access.
-              </p>
-              <p>
                 To ensure your data is secure:
               </p>
               <ul>
-                <li>technology is used to restrict access and encrypt data</li>
-                <li>national IT systems are kept up-to-date and relevant</li>
-                <li>audit trails record every instance that data is viewed or used</li>
+                <li>
+                  individuals with access to data must have appropriate training
+                </li>
+                <li>
+                  technology is used to restrict access and encrypt data
+                </li>
+                <li>
+                  national IT systems are kept up-to-date and relevant
+                </li>
+                <li>
+                  audit trails record every instance that data is viewed or used
+                </li>
               </ul>
-
               <h2 id="our-pledge">Our pledge</h2>
               <p>
-                Information from your records is important for providing your individual care and for improving health, care and services through research and planning e.g. for monitoring safety and developing new treatments.
+                When using data for purposes beyond your individual care, the different organisations that make up health and care services are making a pledge to:
               </p>
-              <p>When using data for purposes beyond your individual care the different organisations that make up health and care services are making a pledge to:</p>
               <div class="panel">
                 <div class="panel__content panel__content--half">
                     <div class="reading-width">
@@ -81,13 +85,13 @@
                             use anonymised data whenever we can
                           </li>
                           <li>
-                            only use personally identifiable data to benefit health and care
+                            give you a choice about using personally identifiable data whenever we can
                           </li>
                           <li>
-                            use the minimum information where possible e.g. removing your name and using your NHS number instead
+                            never use or share personally identifiable data for marketing or insurance purposes (unless you specifically tell us that you want us to)
                           </li>
                           <li>
-                            give you a choice about sharing personally identifiable data whenever we can
+                            make it clear on our website what we use data for, who we share information with and why
                           </li>
                         </ul>
                     </div>
@@ -96,25 +100,21 @@
                   <div class="reading-width">
                     <ul>
                       <li>
-                        respect your decision if you opt out of personally identifiable data being shared beyond your individual care
+                        only use personally identifiable data to benefit health and care
                       </li>
                       <li>
-                        never use or share personally identifiable data for marketing or insurance purposes (unless you specifically tell us that you want us to)
+                        use minimum information where possible e.g. removing your name and using your NHS number instead
                       </li>
                       <li>
-                        only share information about you where allowed by the law and where there has been independent scrutiny and approval
+                        respect your decision if you opt out of personally identifiable data being used beyond your individual care
                       </li>
                       <li>
-                        make it clear on our website what we use data for, who we share information with and why
+                        only use information about you, where allowed by the law and where there has been independent scrutiny and approval
                       </li>
                     </ul>
                   </div>
                 </div>
               </div>
-              <ul class="link-list">
-                <li><a title="Information Governance (IG) - NHS England" target="_blank" href="https://www.england.nhs.uk/ourwork/tsd/ig/">More information on Information Governance</a></li>
-                <li><a title="Assuring Information - NHS Digital" target="_blank" href="http://content.digital.nhs.uk/article/4979/Assuring-information">More details on looking after health data</a></li>
-              </ul>
 
             </div>
             <div class="column--one-third">
