--- a/views/calder/04-benefits-of-data-sharing.html
+++ b/views/calder/04-benefits-of-data-sharing.html
@@ -1,4 +1,4 @@
-{% set title = 'Benefits of data sharing - Register your preferences for sharing health data' %}
+{% set title = 'Benefits of data sharing - Register your preference for sharing health data' %}
 {% set PROTOTYPE_URL = 'calder' %}
 {% set content_title = "Benefits of data sharing" %}
 {% block scripts %}
@@ -48,72 +48,93 @@
       <div class="reading-width">
           <div class="grid-row">
             <div class="column--two-thirds">
+              <h2 id="research">Research</h2>
               <div class="grid-row">
-                <div class="column--one-third">
-                  <div>
-                    <img src="/images/improve_individual_care.svg" height="70" width="auto" alt="">
-                    <h3 class="h4">Improve individual care</h3>
-                  </div>
-                </div>
-                <div class="column--one-third">
-                  <div>
-                    <img src="/images/learn_more_about_diseases.svg" height="70" width="auto" alt="">
-                    <h3 class="h4">Learn more about diseases</h3>
-                  </div>
-                </div>
-                <div class="column--one-third">
-                  <div>
-                    <img src="/images/make_quicker_diagnoses.svg" height="70" width="auto" alt="">
-                    <h3 class="h4">Make quicker diagnoses</h3>
-                  </div>
-                </div>
-              </div>
-              <div class="grid-row">
-                <div class="column--one-third">
-                  <div>
-                    <img src="/images/develop_new_treatments.svg" height="70" width="auto" alt="">
-                    <h3 class="h4">Develop new treatments</h3>
-                  </div>
-                </div>
-
-                <div class="column--one-third">
+                <div class="column--icons">
                   <div>
                     <img src="/images/prevent_serious_illness.svg" height="70" width="auto" alt="">
                     <h3 class="h4">Prevent serious illness</h3>
                   </div>
                 </div>
 
-                <div class="column--one-third">
+                <div class="column--icons">
+                  <div>
+                    <img src="/images/develop_new_treatments.svg" height="70" width="auto" alt="">
+                    <h3 class="h4">Develop new treatments</h3>
+                  </div>
+                </div>
+
+                <div class="column--icons">
+                  <div>
+                    <img src="/images/make_quicker_diagnoses.svg" height="70" width="auto" alt="">
+                    <h3 class="h4">Make quicker diagnoses</h3>
+                  </div>
+                </div>
+
+              </div>
+              <p>
+                Your patient health information provides numerous benefits. It is used in research to find cures and better treatments for diseases like diabetes and cancer.
+              </p>
+              <p>
+                Without this data, the NHS are unable to develop or improve health and care services for the future.
+              </p>
+
+              <h2>Planning</h2>
+              <div class="grid-row">
+                <div class="column--icons">
                   <div>
                     <img src="/images/plan_nhs_services.svg" height="70" width="auto" alt="">
                     <h3 class="h4">Plan NHS health services</h3>
                   </div>
                 </div>
-              </div>
-              <div class="grid-row">
-                <div class="column--one-third">
+
+                <div class="column--icons">
                   <div>
-                    <img src="/images/improve_patient_safety.png" height="70" width="auto" alt="">
-                    <h3 class="h4">Improve patient safety</h3>
-                  </div>
-                </div>
-                <div class="column--one-third">
-                  <div>
-                    <img src="/images/evaluate_nhs_policy.png" height="70" width="auto" alt="">
-                    <h3 class="h4">Evaluate NHS policy</h3>
-                  </div>
-                </div>
-                <div class="column--one-third">
-                  <div>
-                    <img src="/images/reduce_length_of_stay.png" height="70" width="auto" alt="">
+                    <img src="/images/reduce_length_of_stay.svg" height="70" width="auto" alt="">
                     <h3 class="h4">Reduce length of stay</h3>
                   </div>
                 </div>
+
+                <div class="column--icons">
+                  <div>
+                    <img src="/images/improve_individual_care.svg" height="70" width="auto" alt="">
+                    <h3 class="h4">Improve individual care</h3>
+                  </div>
+                </div>
               </div>
-              <h3>Research</h3>
-              <p>Your patient data can be used in research to improve treatment for serious illnesses and conditions. This information can also be used to find cures for diseases like diabetes and cancer. Without this data research, we are unable to develop our understanding or improve our services for the future.</p>
-              <h3>Planning</h3>
-              <p>Patient data can also be used to manage and prepare health and social care services in England. With this information the NHS can plan where to place essential services, like heart units and specialist care wards.</p>
+              <p>
+                Patient health information can also be used to manage and prepare health and social care services. With this information the NHS can plan where to place essential services, like heart units and specialist care wards.
+              </p>
+
+              <h2>Knowledge</h2>
+              <div class="grid-row">
+                <div class="column--icons">
+                  <div>
+                    <img src="/images/learn_more_about_diseases.svg" height="70" width="auto" alt="">
+                    <h3 class="h4">Learn more about diseases</h3>
+                  </div>
+                </div>
+
+                <div class="column--icons">
+                  <div>
+                    <img src="/images/evaluate_nhs_policy.svg" height="70" width="auto" alt="">
+                    <h3 class="h4">Evaluate NHS policy</h3>
+                  </div>
+                </div>
+
+                <div class="column--icons">
+                  <div>
+                    <img src="/images/improve_patient_safety.svg" height="70" width="auto" alt="">
+                    <h3 class="h4">Improve patient safety</h3>
+                  </div>
+                </div>
+
+
+              </div>
+              <p>
+                With all of this information, the NHS can learn more about illnesses and develop our understanding. This helps to improve health and care services for you and your family.
+              </p>
+
           </div>
           <div class="column--one-third">
 
