--- a/views/calder/05-how-opting-out-works.html
+++ b/views/calder/05-how-opting-out-works.html
@@ -1,4 +1,4 @@
-{% set title = 'How opting out works - Register your preferences for sharing health data' %}
+{% set title = 'How opting out works - Register your preference for sharing health data' %}
 {% set PROTOTYPE_URL = 'calder' %}
 {% set content_title = "How opting out works" %}
 {% block scripts %}
@@ -50,35 +50,34 @@
           <div class="grid-row">
             <div class="column--two-thirds">
               <p>
-                If you opt-out of sharing your personally identifiable data, details like your name and address will no longer appear in data shared by the NHS. This will only happen if opt-outs apply to the data set being shared. There are some circumstances where opt-outs do not apply, and your personally identifiable data will still be used.
+                If you opt-out of sharing your personally identifiable data, details like your name and address will no longer appear in data shared by the NHS.
               </p>
 
-              <h3>The opt-out process</h3>
-              <ol>
-                <li>
-                  You set an opt-out preference
-                </li>
-                <li>
-                  Our automated IT systems process this information
-                </li>
-                <li>
-                  We produce a record of your opt-out information
-                </li>
-                <li>
-                  We update our lists of current opt-out preferences
-                </li>
-              </ol>
+              <h2 id="the-opt-out-process">The opt-out process</h2>
 
+              <h3>You set an opt-out preference</h3>
               <p>
-                The record of your opt-out information allows the NHS to check the date your opt-out was received. It also shows if an opt-out decision has been withdrawn. This tells us when we are able to share personally identifiable data and when we need to apply an opt-out preference.
-              </p>
-              <p>
-                Once an opt-out request is received, it can take up to 21 days before it can be applied to future data releases. Once applied, an opt-out will continue to be upheld following a patient's death.
+                Use our online service to opt-out of using your data beyond your individual care.
               </p>
 
-              <h3>Where opt-outs do not apply</h3>
+              <h3>Your preference is processed</h3>
               <p>
-                This opt-out will not apply:
+                Our automated IT systems will process this information quickly and securely.
+              </p>
+
+              <h3>We make a record of your preference</h3>
+              <p>
+                This specifies the date your opt-out was received or if it has been withdrawn. So we know when we are able to use data and when we must apply an opt-out preference.
+              </p>
+
+              <h3>We update our full list of current preferences</h3>
+              <p>
+                It can take up to 21 days before your preference can be applied to future data releases.
+              </p>
+
+              <h2 id="where-opt-outs-do-not-apply">Where opt-outs do not apply</h2>
+              <p>
+                There are some circumstances where opt-outs do not apply. In these circumstances, your personally identifiable data will still be used.
               </p>
               <ul>
                 <li>
@@ -91,7 +90,7 @@
                   If you have given consent for your data to be used for a specific reason, like a medical research study
                 </li>
                 <li>
-                  Where data is anonymised which means individuals are not identifiable from the information
+                  Where data is anonymised which means you cannot be identified from the information
                 </li>
                 <li>
                   Where there is a legal requirement to provide information, such as an order of court
@@ -100,7 +99,7 @@
                   Where there is an overriding public interest in the disclosure of your data
                 </li>
                 <li>
-                  Where information is used to support the management of communicable diseases and other risks to public health
+                  Where information is used to support the management of communicable diseases and other risks to public health, like meningitis
                 </li>
                 <li>
                   Where patient registration information is supplied to the Office for National Statistics
