--- a/views/don/index.html
+++ b/views/don/index.html
@@ -1,5 +1,5 @@
-{% set title = 'Prototype Spen' %}
-{% set PROTOTYPE_URL = 'spen' %}
+{% set title = 'Prototype Don' %}
+{% set PROTOTYPE_URL = 'don' %}
 {% extends 'layouts/layout.html' %}
 
 {% block body %}
@@ -23,25 +23,9 @@
     </div>
 
     <p>This Prototype was created to explore how to present set preferences to returning users or users with preferences having already been set.</p>
-    <h2 class="h3">Stable</h2>
-    <p>
-      <a role="button" class="button" href="/{{PROTOTYPE_URL}}/D01-set-your-preference">Start variation D</a>
-    </p>
     <h2 class="h3">Variations</h2>
     <p>
-      <a role="button" class="button" href="/{{PROTOTYPE_URL}}/A01-opt-out-process">Start variation A</a>
-    </p>
-
-    <p>
-      <a role="button" class="button" href="/{{PROTOTYPE_URL}}/B01-opt-out-process">Start variation B</a>
-    </p>
-
-    <p>
-      <a role="button" class="button" href="/{{PROTOTYPE_URL}}/C01-opt-out-process">Start variation C</a>
-    </p>
-
-    <p>
-      <a role="button" class="button" href="/{{PROTOTYPE_URL}}/D01-set-your-preference">Start variation D</a>
+      <a role="button" class="button" href="/{{PROTOTYPE_URL}}/A">Start variation A</a>
     </p>
 
 
