--- a/views/calder/v1.html
+++ b/views/calder/v1.html
@@ -1,4 +1,4 @@
-{% set title = 'Register your preferences for sharing patient health data' %}
+{% set title = 'Register your preference for sharing patient health data' %}
 {% set PROTOTYPE_URL = 'calder' %}
 {% block scripts %}
 <script src="/javascripts/details.polyfill-1.0.0.min.js"></script>
@@ -6,10 +6,10 @@
 {% extends 'layouts/layout.html' %}
 
 {% block body %}
-<main id="content" class="v1" role="main">
+<main id="content" role="main">
   <div class="page-band">
     <div class="page-section">
-      <a href="/{{PROTOTYPE_URL}}/app/index">Register your preference for sharing health data</a>
+      <a href="/{{PROTOTYPE_URL}}/index">Register your preference for sharing health data</a>
     </div>
   </div>
 
@@ -19,12 +19,13 @@
           <div class="grid-row">
             <div class="column--three-quarters">
               <p>
-                Use this service to manage your preferences for sharing your patient health information.
+                For security reasons we must verify who you are before you can set your preference.
               </p>
               <p>
-              If you opt-out of sharing your personally identifiable data, details like your name and address will no longer appear in data shared by the NHS. This will only happen if opt-outs apply to the data set being shared.
-            </p>
-            <h2>How the service works</h2>
+                We will do this by searching for your contact details in our database in order to send you a one-time verification code.
+              </p>
+
+              <h2 id="how-the-service-works">How the service works</h2>
             </div>
           </div>
       </div>
@@ -45,10 +46,10 @@
                 <div class="column--step-body-with-icon">
                   <h3>Check your details</h3>
                   <p>
-                    Tell us your name, date of birth, postcode and NHS number. We will use these details to find your contact information in our patient database.
+                    Tell us your name, date of birth, postcode and NHS number. We can then find your contact information in our patient database.
                   </p>
                   <p>
-                    The information you provide will not be saved.
+                    The details you provide will not be saved.
                   </p>
 
                 </div>
@@ -81,7 +82,7 @@
                     Using the details we hold in our database, we will send you a one-time verification code to your selected contact method.
                   </p>
                   <p>
-                    When your code is verified, you will be able to set your preference online.
+                    Enter your verification code online to prove your identity.
                   </p>
                 </div>
                 <div class="column--step-icon">
@@ -110,10 +111,10 @@
                 <div class="column--step-body-with-icon">
                   <h3>Set your preference</h3>
                   <p>
-                    You will then be able to set an opt-out preference. Once an opt-out request is received, it can take up to 21 days before it can be applied to future data releases.
+                    You will then be able to set an opt-out preference. The decision you make will not affect your individual care.
                   </p>
                   <p>
-                    The decision you make will not affect your individual care.
+                    You can also change your mind at any time.
                   </p>
 
                 </div>
@@ -132,17 +133,12 @@
       <div class="reading-width">
           <div class="grid-row">
             <div class="column--three-quarters">
-              <h2>Before you start</h2>
               <p>
-                You must have an email address or phone number registered with an NHS service to continue online. <a href="/H/app/00-other-ways-to-set-your-preferences">Other ways to set your preferences instead</a>.
+                By continuing you agree to let us search for your details in our database to send you a one-time security passcode.
               </p>
-              <p>To continue you will need:</p>
-              <ul>
-                <li>access to your email or mobile phone</li>
-                <li>your NHS number</li>
-              </ul>
-
-              <p><a role="button" class="button" title="Continue Opt-out Process" href="/{{PROTOTYPE_URL}}/v1-confirm-who-you-are">Start</a> <a href="#" class="button--link">I need help finding my NHS number</a></p>
+              <p>
+                <a href="/{{PROTOTYPE_URL}}/end" class="button" role="button">Agree and continue</a>
+              </p>
             </div>
           </div>
         </div>
@@ -152,7 +148,7 @@
     <div class="reading-width">
       <div class="grid-row">
         <div class="column--three-quarters">
-          {{ patterns.page_nav( "Overview", "/" + PROTOTYPE_URL + "/01-overview", "", "" ) }}
+          {{ patterns.page_nav( "Before you start", "/" + PROTOTYPE_URL + "/06-register-your-preference#before-you-start", "", "" ) }}
         </div>
       </div>
     </div>
