update prototype index page

--- a/views/calder/index.html
+++ b/views/calder/index.html
@@ -28,7 +28,9 @@
       It explores how to best provide users with an understanding of the service journey they are about to embark on
     </p>
 
-    <a role="button" class="button" href="/{{PROTOTYPE_URL}}/01-overview">Start Prototype v1</a>
+    <a role="button" class="button" href="/{{PROTOTYPE_URL}}/v1">Start Prototype v1</a>
+    <a role="button" class="button" href="/{{PROTOTYPE_URL}}/v2">Start Prototype v2</a>
+    <a role="button" class="button" href="/{{PROTOTYPE_URL}}/v3">Start Prototype v3</a>
     <hr>
     <h2 id="prototype-sections">Prototype sections</h2>
     <div class="grid-row">
@@ -62,15 +64,10 @@
             <a href="/{{PROTOTYPE_URL}}/v1">Start v1</a>
           </li>
           <li>
-            <a href="/{{PROTOTYPE_URL}}/v1-confirm-who-you-are">
-              Confirm who you are v1
-            </a>
+            <a href="/{{PROTOTYPE_URL}}/v2">Start v2</a>
           </li>
           <li>
-            <a href="/{{PROTOTYPE_URL}}/end">
-              End journey
-            </a>
-            <br />
+            <a href="/{{PROTOTYPE_URL}}/v3">Start v3</a>
           </li>
 
         </ol>
