--- a/views/J/app/index.html
+++ b/views/J/app/index.html
@@ -64,13 +64,20 @@
                  You agree to let us search for your details in our database, so that we can send you a one-time security passcode
                </p>
                 <p>
-                  <a href="/{{PROTOTYPE_URL}}/end" class="button" role="button">Agree and continue</a>
+                  <a href="/{{PROTOTYPE_URL}}/app/02-your-details" class="button" role="button">Agree and continue</a>
                 </p>
               </div>
             </div>
+
+            <div class="column--three-quarters">
+
+            </div>
+
           </div>
         </div>
       </div>
+
+
 
   <div class="page-section">
     <div class="reading-width">
