Add ability to clear out preferences for lab

--- a/views/J/06-register-your-preference.html
+++ b/views/J/06-register-your-preference.html
@@ -2,6 +2,7 @@
 {% set PROTOTYPE_URL = 'J' %}
 {% set content_title = "Register your preference" %}
 {% block scripts %}
+<script src="/javascripts/{{PROTOTYPE_URL}}/0X-before-you-start.js"></script>
 {% endblock %}
 {% extends 'layouts/layout.html' %}
 
