--- a/views/J/app/index.html
+++ b/views/J/app/index.html
@@ -19,7 +19,7 @@
           <div class="grid-row">
             <div class="column--three-quarters">
               <p>
-                Use this service to manage your preferences for sharing your patient health information.
+                Use this service to manage your preference for sharing your patient health information.
               </p>
               <p>
               If you opt-out of sharing your personally identifiable data, details like your name and address will no longer appear in data shared by the NHS. This will only happen if opt-outs apply to the data set being shared.
@@ -45,10 +45,9 @@
                 <div class="column--step-body-with-icon">
                   <h3>Check your details</h3>
                   <p>
-                    Tell us your name, date of birth, postcode and NHS number. We will use these details to find your contact information in our patient database.
-                  </p>
+                    Tell us your name, date of birth, postcode and NHS number. We can then find your contact information in our patient database.                  </p>
                   <p>
-                    The information you provide will not be saved.
+                    The details you provide will not be saved.
                   </p>
 
                 </div>
@@ -134,7 +133,7 @@
             <div class="column--three-quarters">
               <h2>Before you start</h2>
               <p>
-                You must have an email address or phone number registered with an NHS service to continue online. <a href="/{{PROTOTYPE_URL}}/app/00-other-ways-to-set-your-preferences">Other ways to set your preferences instead</a>.
+                You must have an email address or phone number registered with an NHS service to continue online. <a href="/{{PROTOTYPE_URL}}/app/00-other-ways-to-set-your-preferences">Other ways to set your preference instead</a>.
               </p>
               <p>To continue you will need:</p>
               <ul>
