--- a/public/stylesheets/nhsuk.scss
+++ b/public/stylesheets/nhsuk.scss
@@ -69,6 +69,8 @@
 @import "components/v3";
 
 @import "components/proto-h";
+@import "components/proto-j";
+
 
 @import "components/page-band";
 @import "components/alpha-banner";
