Updated NHS number advice

--- a/views/J/06-register-your-preference-b.html
+++ b/views/J/06-register-your-preference-b.html
@@ -99,9 +99,14 @@
                   </div>
                 </div>
 
-                <p>
-                  Ask your GP for help if you can't find your NHS number
-                </p>
+                <div class="grid-row">
+                  <div class="column--full">
+                    <h2 class="h4">Other ways</h2>
+                  </div>
+                  <div class="column--full">
+                    <p>You can also find your NHS number on your NHS Medical Card if you have one. If you don't have any of these, you can ask your GP for help in finding your NHS number.</p>
+                  </div>
+                </div>
               </div>
             </div>
           </details>
