add new native button style

--- a/views/J/app/05-make-your-choice.html
+++ b/views/J/app/05-make-your-choice.html
@@ -46,13 +46,11 @@
                   <div id="single-question-input-error" class="error error-message">
                     <p class="error-text">Please select your preference</p>
                   </div>
-                  <input type="radio" name="single-pref" id="single-opted-out" value="single-opted-out" class="form-label form-label--radio">
-                  <label for="single-opted-out" class="form-label form-label--radio multiple-choice--radio">
-                    Yes
+
+                  <label for="single-opted-out" class="form-label form-label--radio multiple-choice--radio lg"> <input type="radio" name="single-pref" id="single-opted-out" value="single-opted-out" class=""> Yes
                   </label>
-                  <input type="radio" name="single-pref" id="single-opted-in" value="single-opted-in" class="multiple-choice--radio">
-                  <label for="single-opted-in" class="form-label form-label--radio multiple-choice--radio">
-                    No
+
+                  <label for="single-opted-in" class="form-label form-label--radio multiple-choice--radio lg"> <input type="radio" name="single-pref" id="single-opted-in" value="single-opted-in" class="multiple-choice--radio"> No
                   </label>
                 </div>
               <input id="submit-pref" class="button" type="submit" name="submit-pref" value="Continue">
