--- a/public/stylesheets/components/_form-input.scss
+++ b/public/stylesheets/components/_form-input.scss
@@ -6,14 +6,14 @@ input[type='password'] {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-  border-radius: 0;
+  border-radius: 2px;
   box-sizing: border-box;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   display: block; // Remove margin under textarea in Chrome and FF
   width: 100%;
   margin: $base-font-size/2 0 $base-font-size 0;
-  padding: $base-font-size/2;
+  padding: 0.5em;
   border: 2px solid $nhs-blue;
   font-family: inherit;
   font-size: inherit;
@@ -36,6 +36,17 @@ input[type='password'] {
     @include media($site-width) {
       width: 11.5em;
     }
+  }
+}
+
+
+input[type="radio"]{
+
+  &:focus {
+    outline: 0;
+    -webkit-box-shadow: 0 0 0 5px $focus-colour;
+    -moz-box-shadow: 0 0 0 5px $focus-colour;
+    box-shadow: 0 0 0 5px $focus-colour;
   }
 }
 
