--- a/public/stylesheets/nhsuk.css
+++ b/public/stylesheets/nhsuk.css
@@ -3619,7 +3619,7 @@ input[type=range]:focus::-ms-fill-upper {
   font-weight: 600;
   line-height: 48px;
   text-transform: none;
-  padding: 32px 0; }
+  padding: 32px 0 8px 0; }
   @media (min-width: 641px) {
     .stepper {
       font-size: 42px;
