--- a/views/J/app/02-your-details.html
+++ b/views/J/app/02-your-details.html
@@ -92,7 +92,7 @@
                             <div class="form-row">
                               <label for="nhs-number" class="form-label error-label">NHS Number</label>
                               <span class="form-label__hint">This is a 10 digit number, like 485 777 3456</span>
-                              <span class="form-label__hint">You can find this on any letter sent to you by NHS, on a prescription or by logging in to a GP practice online service</span>
+                              <span class="form-label__hint">You can find this on any letter sent to you by the NHS, on a prescription or by logging in to a GP practice online service</span>
                               <span class="error error-message error-text" id="nhs-number-error">Please enter your NHS number</span>
                               <input autocomplete="off" type="number" id="nhs-number-input" name="nhs-number" value="" class="-small form-control">
                             </div>
