Add prototype links

--- a/views/J0/index.html
+++ b/views/J0/index.html
@@ -1,4 +1,4 @@
-{% set title = 'Prototype J' %}
+{% set title = 'Prototype J0' %}
 {% set PROTOTYPE_URL = 'J0' %}
 {% extends 'layouts/layout.html' %}
 
@@ -27,7 +27,7 @@
     <p>
       It introduces an alternative to the confirm who you are checkbox method of gaining consent. It aims to provide users with a better understanding of the verification process they are about to undertake.
     </p>
-    
+
 
     <a role="button" class="button" href="/{{PROTOTYPE_URL}}/01-overview">Start Prototype</a>
     <hr>
