--- a/views/index.html
+++ b/views/index.html
@@ -36,6 +36,20 @@
           </p>
           <p><a title="Start Prototype J - {{ title }}" role="button" class="button" href="/J/01-overview">Start Prototype J</a></p>
         </div>
+
+        <div class="callout">
+          <h3>
+            <a title="Prototype J0 Summary Page - {{ title }}" href="/J/index">Prototype J0</a>
+          </h3>
+          <p>
+            Landing page for Prototype J0 series
+          </p>
+          <p>
+            Original wording on question.
+          </p>
+          <p><a title="Start Prototype J0 - {{ title }}" role="button" class="button" href="/J0/01-overview">Start Prototype J0</a></p>
+        </div>
+
         <div class="callout">
           <h3>
             <a title="Prototype Aire Summary Page - {{ title }}" href="/aire/index">Prototype Aire</a>
